--- a/WebContent/templates/navbar.xhtml
+++ b/WebContent/templates/navbar.xhtml
@@ -17,11 +17,11 @@
             <p:layoutUnit position="north" class="decoration">
                 <div class="ui-grid ui-grid-responsive">
                     <div class="ui-grid-row shadowme">
-                        <div class="ui-grid-col-1"></div>
-                        <div class="ui-grid-col-5">
+<!--                         <div class="ui-grid-col-1"></div>
+                        <div class="ui-grid-col-2">
                             Test Navbar
-                         </div>
-                        <div class="ui-grid-col-5 alignRight" style="padding-top: 26px;">
+                         </div> -->
+                        <div class="ui-grid-col-12 alignLeft" style="padding-top: 5px;">
                             <h:form>
                                 <h:commandLink value="Dashboard" action="#" styleClass="headerLink"/>
                                 &#160;&#160;
