--- a/WebContent/templates/navbar.xhtml
+++ b/WebContent/templates/navbar.xhtml
@@ -21,7 +21,7 @@
                         <div class="ui-grid-col-2">
                             Test Navbar
                          </div> -->
-                        <div class="ui-grid-col-12 alignLeft" style="padding-top: 5px;">
+                        <div class="ui-grid-col-12 alignLeft">
                             <h:form>
                                 <h:commandLink value="Dashboard" action="#" styleClass="headerLink"/>
                                 &#160;&#160;
