--- a/WebContent/templates/navbar.xhtml
+++ b/WebContent/templates/navbar.xhtml
@@ -10,6 +10,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0" />
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css"></link>
+        <!-- <h:outputStylesheet name="style.css" /> -->
         <ui:debug hotkey="x" />
     </h:head>
     <h:body>
@@ -21,7 +22,7 @@
                         <div class="ui-grid-col-2">
                             Test Navbar
                          </div> -->
-                        <div class="ui-grid-col-12 alignLeft">
+                        <div class="ui-grid-col-12">
                             <h:form>
                                 <h:commandLink value="Dashboard" action="#" styleClass="headerLink"/>
                                 &#160;&#160;
@@ -34,7 +35,7 @@
                                 <h:commandLink value="About" action="#" styleClass="headerLink" />
                             </h:form>
                         </div>
-                        <div class="ui-grid-col-1"></div>
+                        <!-- <div class="ui-grid-col-1"></div> -->
                     </div>
                 </div>
             </p:layoutUnit>
