Separated pages, reworked CachingInterceptor with Guava.

--- a/WebContent/templates/navbar.xhtml
+++ b/WebContent/templates/navbar.xhtml
@@ -24,15 +24,17 @@
                          </div> -->
                         <div class="ui-grid-col-12">
                             <h:form>
-                                <h:commandLink value="Dashboard" action="#" styleClass="headerLink"/>
+                                <h:commandLink value="Alerts" action="alerts" styleClass="headerLink"/>
                                 &#160;&#160;
-                                <h:commandLink value="Book" action="#" styleClass="headerLink" />
+                                <h:commandLink value="Gear" action="gear" styleClass="headerLink" />
                                 &#160;&#160;
-                                <h:commandLink value="Track" action="#" styleClass="headerLink" />
+                                <h:commandLink value="Events" action="home" styleClass="headerLink" />
                                 &#160;&#160;
-                                <h:commandLink value="Live" action="#" styleClass="headerLink" />
+                                <h:commandLink value="Resources" action="resources" styleClass="headerLink" />
                                 &#160;&#160;
-                                <h:commandLink value="About" action="#" styleClass="headerLink" />
+                                <h:commandLink value="Upgrades" action="upgrades" styleClass="headerLink" />
+                                &#160;&#160;
+                                <h:commandLink value="Weapons" action="weapons" styleClass="headerLink" />
                             </h:form>
                         </div>
                         <!-- <div class="ui-grid-col-1"></div> -->
