Refactoring, fixing item names.

--- a/WebContent/templates/navbar.xhtml
+++ b/WebContent/templates/navbar.xhtml
@@ -23,20 +23,19 @@
                             Test Navbar
                          </div> -->
                         <div class="ui-grid-col-12">
-                            <h:form>
-                                <h:commandLink value="Alerts" action="alerts" styleClass="headerLink"/>
-                                &#160;&#160;
-                                <h:commandLink value="Gear" action="gear" styleClass="headerLink" />
-                                &#160;&#160;
-                                <h:commandLink value="Events" action="home" styleClass="headerLink" />
-                                &#160;&#160;
-                                <h:commandLink value="Resources" action="resources" styleClass="headerLink" />
-                                &#160;&#160;
-                                <h:commandLink value="Upgrades" action="upgrades" styleClass="headerLink" />
-                                &#160;&#160;
-                                <h:commandLink value="Weapons" action="weapons" styleClass="headerLink" />
-                            </h:form>
-                        </div>
+							<p:link value="Alerts" outcome="alerts" styleClass="headerLink" />
+							&#160;&#160;
+							<p:link value="Gear" outcome="gear" styleClass="headerLink" />
+							&#160;&#160;
+							<p:link value="Events" outcome="home" styleClass="headerLink" />
+							&#160;&#160;
+							<p:link value="Resources" outcome="resources"
+								styleClass="headerLink" />
+							&#160;&#160;
+							<p:link value="Upgrades" outcome="upgrades" styleClass="headerLink" />
+							&#160;&#160;
+							<p:link value="Weapons" outcome="weapons" styleClass="headerLink" />
+						</div>
                         <!-- <div class="ui-grid-col-1"></div> -->
                     </div>
                 </div>
