--- a/WebContent/templates/navbar.xhtml
+++ b/WebContent/templates/navbar.xhtml
@@ -34,6 +34,8 @@
 							&#160;&#160;
 							<p:link value="Upgrades" outcome="upgrades" styleClass="headerLink" />
 							&#160;&#160;
+							<p:link value="Warframes" outcome="warframes" styleClass="headerLink" />
+							&#160;&#160;
 							<p:link value="Weapons" outcome="weapons" styleClass="headerLink" />
 						</div>
                         <!-- <div class="ui-grid-col-1"></div> -->
