Various new things

--- a/WebContent/templates/navbar.xhtml
+++ b/WebContent/templates/navbar.xhtml
@@ -37,6 +37,8 @@
 							<p:link value="Warframes" outcome="warframes" styleClass="headerLink" />
 							&#160;&#160;
 							<p:link value="Weapons" outcome="weapons" styleClass="headerLink" />
+							&#160;&#160;
+							<p:link value="Nightwaves" outcome="nightwaves" styleClass="headerLink" />
 						</div>
                         <!-- <div class="ui-grid-col-1"></div> -->
                     </div>
